kubernetes/apps/media/huntarr/app/networkpolicy.yaml
---
# Huntarr NetworkPolicy - Automated media hunting
# Searches for missing/upgraded media via Sonarr/Radarr APIs
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: huntarr-isolation
  namespace: media
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: huntarr
  ingress:
    # Allow from envoy-internal Gateway (internal HTTPS access)
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
      toPorts:
        - ports:
            - port: "9705"
              protocol: TCP
    # Allow Prometheus metrics scraping
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
  egress:
    # Allow DNS queries
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    # Allow egress to Sonarr (TV show searches)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "8989"
              protocol: TCP
    # Allow egress to Radarr (movie searches)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: radarr
      toPorts:
        - ports:
            - port: "7878"
              protocol: TCP
    # Allow egress to Prowlarr (indexer searches)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
